--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ body {
     position: absolute;
     bottom: 10px;
     right: 10px;
-    background: #17a2b8;
+    background: var(--accent-color);
     padding: 0.3rem 0.8rem;
     border-radius: 20px;
     display: flex;
@@ -101,7 +101,7 @@ body {
     font-size: 0.75rem;
     font-weight: 600;
     color: #fff;
-    box-shadow: 0 2px 10px rgba(23, 162, 184, 0.5);
+    box-shadow: 0 2px 10px rgba(147, 112, 219, 0.5);
 }
 
 .code-icon {
